<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheNewBoston</string>
    <string name="activity_name_preferences">Preferences</string>
    <string name="activity_name_about_us">About us</string>
    <string name="total_display">Your total is</string>
    <string name="b_add">Add 1</string>
    <string name="b_sub">Subtract 1</string>
    <string name="hint_command_input">Enter a command</string>
    <string name="b_check">Try Command</string>
    <string name="command_display_default">Invalid</string>
    <string name="label_email">Email address(es)</string>
    <string name="label_intro">Hateful Intro</string>
    <string name="label_name">Person\'s name</string>
    <string name="send_email">Send email</string>
    <string name="label_has_done">Stupid Things that this Person does</string>
    <string name="label_to_do">What you want to do to this person:</string>
    <string name="label_outro">Hateful Outro</string>
    <string name="b_wallpaper">Set wallpaper</string>
    <string name="description_photo">Photo picked by the user is displayed here</string>
    <string name="description_camera">Image button that allows users to take pictures with the camera and then display it</string>
    <string name="hint_send">Input text to be send to the receive activity</string>
    <string name="b_start_activity">Start activity</string>
    <string name="b_start_activity_for_result">Start activity for result</string>
    <string name="tv_noun_prompt">Reuben is&#8230;</string>
    <string name="rg_noun_selection_1">Crazy</string>
    <string name="rg_noun_selection_2">Awsome</string>
    <string name="rg_noun_selection_3">Both</string>
    <string name="rg_noun_selection_comment_default">Pick something</string>
    <string name="rg_noun_selection_comment_1">Probably right</string>
    <string name="rg_noun_selection_comment_2">Definitely right</string>
    <string name="rg_noun_selection_comment_3">Spot on</string>
    <string name="returnData">return</string>
    <string name="mi_about_us">About us</string>
    <string name="mi_preferences">Preferences</string>
    <string name="about_us">"This app was created by Reuben John with the aim of getting an experience of developing an app by following the Android tutorial series on TheNewBoston YouTube channel"</string>
    <string name="exit">Exit</string>
    <string name="dummy">Dummy</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add_tab">Add a tab</string>
    <string name="go">Go</string>
    <string name="browser_backward">Backward</string>
    <string name="browser_forward">Forward</string>
    <string name="browser_refresh">Refresh</string>
    <string name="browser_clear_hostory">Clear_history</string>
    <string name="hint_set_address">type in a website address</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="confirm">Confirm</string>
    <string name="prefs_status">Go</string>
    <string name="input_name">Enter a name</string>
    <string name="sql_update">Update SQLite database</string>
    <string name="sql_view">View record</string>
    <string name="sql_names">Names</string>
    <string name="sql_hotness">Hotness</string>
    <string name="sql_hotness_scale">Hotness scale (pick value: 1–10)</string>
    <string name="sql_hotness_picked">You picked 5</string>
    <string name="sql_info">Get info from DB</string>
    <string name="hint_sql_id">Enter row ID</string>
    <string name="sql_get_info">Get information</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>