<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_sql_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_hotness_scale"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/sb_hotness_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="8"
        android:progress="5"
        android:soundEffectsEnabled="true" />

    <TextView
        android:id="@+id/tv_sql_hotness_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sql_hotness_picked"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/b_sql_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_update" />

    <Button
        android:id="@+id/b_sql_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_view" />

    <EditText
        android:id="@+id/et_sql_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="" />

    <Button
        android:id="@+id/b_sql_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_get_info" />

    <Button
        android:id="@+id/b_sql_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

    <Button
        android:id="@+id/b_sql_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>