<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_noun_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_noun_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rg_noun_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rg_noun_selection_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_noun_selection_1" />

        <RadioButton
            android:id="@+id/rg_noun_selection_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_noun_selection_2" />

        <RadioButton
            android:id="@+id/rg_noun_selection_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_noun_selection_3" />
    </RadioGroup>

    <Button
        android:id="@+id/b_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnData" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rg_noun_selection_comment_default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
