<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dummy"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/b_pref_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/b_pref_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load" />

    <TextView
        android:id="@+id/tv_prefs_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefs_status"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
