<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_returned_picked"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:contentDescription="@string/description_photo"
        android:src="@drawable/splash" />

    <ImageButton
        android:id="@+id/ib_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:contentDescription="@string/description_camera"
        android:src="@drawable/ic_action_camera" />

    <Button
        android:id="@+id/b_select_wallpaper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/b_wallpaper" />

</LinearLayout>