<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" >

    <EditText
        android:id="@+id/et_command"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_command_input"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_run_command"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/b_check" />

        <ToggleButton
            android:id="@+id/tb_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:checked="true"
            android:paddingTop="7dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_command_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/command_display_default" />

</LinearLayout>